--- a/css/media.css
+++ b/css/media.css
@@ -18,7 +18,7 @@
 		display: block;
 		top: .3em;
 		font-size: 2.5em;
-		color: white;
+		color: white !important;
 		padding: 0 .25em;
 		margin-right: .5em;
 	}
