--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ header a.number {
 footer {
 	padding: 2.5em 0;
 	text-align: center;
-	background-color: #281356;
+	background-color: #3c3c3c;
 	color: white;
 }
 
